speckle-syntax/src/snapshots/speckle_syntax__speckle_attribute__tests__speckle_attribute_named_identifier.snap
---
source: speckle-syntax/src/speckle_attribute.rs
expression: "snapshot_speckle_attribute(&formatdoc!\n{\"\n            #[speckle(identifier = \\\"{EXAMPLE_ID}\\\")]\n            struct Foo;\n        \"})"
---
byte_start: 0
byte_end: 63
arguments:
  - cb4cb14c-8e40-495a-b17f-6227b622f4a8
