speckle-syntax/src/snapshots/speckle_syntax__speckle_attribute__tests__speckle_attribute_positional_string.snap
---
source: speckle-syntax/src/speckle_attribute.rs
expression: "snapshot_speckle_attribute(&format!(\"#[speckle(\\\"{EXAMPLE_ID}\\\")]\\nstruct Foo;\"))"
---
byte_start: 0
byte_end: 50
arguments:
  - cb4cb14c-8e40-495a-b17f-6227b622f4a8
